--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=3000
 # YouTube Data API Key (v3)
-YOUTUBE_API_KEY=AIzaSyDTFAKJydDp_uTuo1DydIve4_aCStdpFeE
+YOUTUBE_API_KEY=
 
 # Discourse Forum Base URL (e.g., https://community.n8n.io)
 FORUM_BASE_URL=https://community.n8n.io
